syntax = "proto3";

package ir.sndu;

option java_package = "ir.sndu.rpc";

service AuthService {
    rpc StartPhoneAuth (RequestStartPhoneAuth) returns (ResponseStartPhoneAuth) {
    }
}

message RequestStartPhoneAuth {
    int64 phone_number = 1;
    int32 app_id = 2;
    string api_key = 3;
    string device_hash = 4;
    string device_info = 5;
}

message ResponseStartPhoneAuth {
    string transaction_hash = 1;
    bool is_registered = 2;
}