syntax = "proto3";

package ir.sndu.server;

import "api/apipeer.proto";
import "api/apiuser.proto";

service UserService {
    rpc LoadFullUsers(RequestLoadFullUsers) returns (ResponseLoadFullUsers) {}
}

message RequestLoadFullUsers{
    repeated ApiUserOutPeer userPeers = 1;
}

message ResponseLoadFullUsers{
    repeated ApiUser fullUsers = 1;
}
